--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,48 +1,84 @@
-
+/* General Reset */
 body, html {
     margin: 0;
     padding: 0;
     width: 100%;
+    font-family: sans-serif;
 }
 
+/* Container */
 .container {
     width: 100%;
     height: 100vh; /* Full viewport height */
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Center content vertically */
+    align-items: center; /* Center content horizontally */
     background-image: linear-gradient(to bottom, #80AF81, #D6EFD8);
 }
 
 .container-1 {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between; /* Space between headers/buttons and images */
+    align-items: center; /* Align items vertically */
+    width: 90%; /* Add padding around the layout */
+    margin: auto;
 }
 
-h3 {
-    margin: 0px 0px 0px 80px;
-    padding-top: 50px;
-    font-size: 2rem;
-}
-
-h1 {
-     font-family: sans-serif;
-     font-size: 5rem; 
-}
-
-.images {
-    /* margin-left: 600px; */
-    width: 400px;
-    height: 400px
+.P1-btn {
+    margin-right: 10px; /* Reduce spacing between buttons */
 }
 
 .homeImages {
-    display: inline;
-    transform: translate(-50px, 0px);
-    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 50px; /* Add space between headers/buttons and images */
 }
 
-/* Style for the button */
-.P1-btn  {
+.text-container {
+    padding: 20px 40px; /* Add padding around the text */
+    transform: translate(100px, -20px); /* Preserve existing transform */
+}
+
+h2, h1 {
     font-family: sans-serif;
+    font-size: 5rem;
+    font-weight: lighter;
+    margin: 0;
+}
+
+
+/* Headings */
+h3 {
+    margin: 0 0 0 -1200px;
+    padding-top: 50px;
+    font-size: 1.5rem;
+}
+
+.title {
+    font-size: 5rem;
+    font-weight: lighter;
+    margin-right: 50px;
+}
+
+.subtitle {
+    font-size: 5rem;
+    transform: translate(40px, -30px);
+    font-weight: 900;
+}
+
+/* Buttons */
+.button-group {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    transform: translateX(-30px);
+}
+
+.P1-btn {
     font-size: 20px;
     padding: 15px 30px;
     border: 2px solid white;
@@ -54,7 +90,6 @@ h1 {
     outline: none;
 }
 
-/* Hover effect */
 .P1-btn:hover {
     background-color: #1A5319;
     border: 2px solid #1A5319;
@@ -66,18 +101,56 @@ h1 {
     background-color: #D6EFD8;
 }
 
-/* Focus effect */
-.styled-button:focus {
-    box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.5);
+/* Images */
+.homeImages {
+    display: inline;
+    transform: translate(-50px, 0);
+    padding: 0;
 }
 
+/* ////////////// */
+
+
 .images {
-    transform: scale(0) translateY(-50px); /* Start state (hidden in the circle) */
+    width: 400px;
+    height: 400px;
+    position: relative;
+    z-index: 1;
     opacity: 0;
+    transform: scale(0) translateY(-50px);
     transition: transform 0.5s ease-out, opacity 0.5s ease-out;
 }
 
 .homeImages.animate .images {
-    transform: scale(1) translateY(0); /* End state (fully visible) */
+    transform: scale(1) translateY(0);
     opacity: 1;
+}
+
+#atom {
+    z-index: 3; /* Highest priority */
+    
+}
+
+#pride {
+    z-index: 1;
+    width: 350px;
+    margin: 0 0 25px -490px;
+    transform: rotate(-20deg);
+}
+
+#limit {
+    z-index: 2;
+    height: 350px;
+    margin: 0 0 50px -200px;
+    transform: rotate(20deg);
+}
+
+.circle {
+    background-color: black;
+    width: 380px;
+    height: 70px;
+    border-radius: 50%;
+    transform: translate(0, -70px);
+    position: relative;
+    z-index: -1;
 }
