--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,7 +76,7 @@
 
     <section id="page4">
         <div>
-            
+            page4
         </div>
     </section>
     <script src="./scripts/main.js"></script>
