--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Library</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <section id="page1">
@@ -34,7 +36,7 @@
                 <img id="atoms" src="/assets/atom.png" alt="book1" class="atoms">
             </div>
             <div class="text-container-fav">
-                    <h2>Your Favorite</h2>
+                    <h2 style="font-weight: 500;">YOUR FAVORITE</h2>
                     <h3 style="padding-top: 50px; font-size: 2.5rem; margin: 0;">Atomic Habits</h3>
                     <p>review of their favorite book (down)
                         This book helped me to get my life straight by building a habit that
@@ -45,7 +47,7 @@
 
     <section id="page3">
         <div class="containerPrevious">
-            <h2>Previous Books</h2>
+            <h2>PREVIOUS BOOKS</h2>
             <div class="contPrev">
                 <div class="prevBooks">
                     <img src="/assets/atom.png" alt="book1" class="prevBookImg">
@@ -75,8 +77,34 @@
     </section>
 
     <section id="page4">
-        <div>
-            page4
+        <div class="containerFooter">
+            <div class="footerText">
+                <h2 style="margin-right: 250px; font-size: 4rem;">CONNECT WITH US</h2>
+                <div>
+                    <h4 style="font-size: 2rem;">MAIN OFFICE</h4>
+                    <p>
+                        123 Anywhere St. <br>
+                        Any City, State <br>
+                        Any Country <br>
+                        (123) 456 7890 <br>
+                    </p>
+                </div>
+                <div>
+                    <h4 style="font-size: 2rem;">SOCIAL MEDIA</h4>
+                    <div class="socialMedia">
+                        <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="social-icon facebook">
+                            <i class="fab fa-facebook-f"></i> Facebook
+                        </a>
+                        <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" class="social-icon instagram">
+                            <i class="fab fa-instagram"></i> Instagram
+                        </a>
+                        <a href="https://www.twitter.com" target="_blank" rel="noopener noreferrer" class="social-icon twitter">
+                            <i class="fab fa-twitter"></i> Twitter
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <h4>Email: amirabdu.com@gmail.com</h4>
         </div>
     </section>
     <script src="./scripts/main.js"></script>
